--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -57,7 +57,7 @@ nav i {
 }
 
 /* Tablet style */
-@media only screen and (max-width: 1023px){
+@media only screen and (max-width: 1024px){
   nav {
     background: transparent;
   }
