--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -58,6 +58,7 @@
 /* Tweet Header */
 
 .tweet header {
+  word-wrap: break-word;
   font-size: 1em;
   display: flex;
   justify-content: space-between;
@@ -89,6 +90,7 @@
   margin-left: 5%;
   margin-right: 5%;
   font-weight: 600;
+  word-wrap: break-word;
 }
 
  /* Tweet Footer */
